app/templates/css/templatemo-xtra-blog.css
/* ... */
.ai-gen h4 {
    font-size: 1.4rem;
}

.ai-gen table {
    font-size: 17px;
    line-height: 1.45em;
    margin-bottom: 1em;
}

.ai-gen thead th {
    color: #666;
    font-weight: bold;
}

.ai-gen tbody td strong {
    color: #777;
    font-weight: normal;
}

.ai-gen td, .ai-gen th {
    padding-right: 1.15em;
}

.tm-nav { margin-left: -30px; }

.tm-social-link {
    display: inline-block;
    background-color: white;
    font-size: 1.4rem;
    width: 50px;
    height: 50px;
    text-align: center;
    padding-top: 8px;
    margin-right: 10px;
    margin-bottom: 15px;
}

.tm-social-icon {
    color: #00684A;
    transition: all 0.3s ease;
}

.tm-social-link:hover .tm-social-icon.fa-facebook { color: #3b5998; }
.tm-social-link:hover .tm-social-icon.fa-twitter { color: #00acee; }
.tm-social-link:hover .tm-social-icon.fa-instagram { color: #3f729b; }
.tm-social-link:hover .tm-social-icon.fa-linkedin { color: #0e76a8; }
.navbar-toggler { display: none; }

.tm-search-form {
    display: flex;
    align-items: center;
    justify-content: flex-end;
}

.form-inline .form-control.tm-search-input {
    display: block;
    height: 60px;
    width: 480px;
    margin-right: 30px;
    border-radius: 0;
    border-color: #00684A;
    font-size: 1.2rem;
}

.form-inline .form-control.tm-rag-input {
    display: block;
    height: 60px;
    width: 570px;
    margin-right: 30px;
    border-radius: 0;
    border-color: #00684A;
    font-size: 1.2rem;
}

.tm-search-button {
    width: 60px;
    height: 60px;
    border: none;
    background-color: #00684A;
    transition: all 0.3s ease;
}

.tm-search-button:hover { background-color: #004628; }

.tm-search-icon {
    color: white;
    font-size: 1.3rem;
}

.tm-post-link {
    display: block;
    position: relative;
	cursor: pointer;
}

.tm-post-link-inner {
    overflow: hidden;
    background: #3085a3;
}

.tm-post-link img {
    position: relative;
	display: block;
	min-height: 100%;
	max-width: 100%;
	opacity: 0.8;
}

.effect-lily img {
	max-width: none;
	width: -webkit-calc(100% + 50px);
	width: calc(100% + 50px);
	opacity: 0.7;
	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
	transition: opacity 0.35s, transform 0.35s;
	-webkit-transform: translate3d(-40px,0, 0);
	transform: translate3d(-40px,0,0);
}

.effect-lily:hover img { opacity: 1; }

.effect-lily:hover img {
    -webkit-transform: translate3d(0,0,0);
	transform: translate3d(0,0,0);
}

.tm-post { margin-bottom: 75px; }

.tm-new-badge {
    top: 25px;
    right: -10px;
    background-color: #00684A;
    color: white;
    padding: 5px 20px;
}

.tm-post-title {
    font-size: 1.7rem;
    transition: all 0.3s ease;
}

.tm-h3 {
    font-size: 1.3rem;
    color: #777;
}

.tm-post-link:hover .tm-post-title { color: #00684A; }

.tm-btn {
    display: inline-block;
    border-radius: 5px;
    font-size: 1.3rem;
    transition: all 0.3s ease;
}

.tm-btn-primary {
    background-color: #00684A;
    color: white;
    padding: 8px 43px;
    border: none;
}

.tm-btn-small { padding: 8px 33px; }

.tm-btn-primary:hover {
    background-color: #004628;
    color: white;
}

.tm-paging-nav ul li {
    list-style: none;
    display: inline-block;
    margin-right: 10px;
}

.tm-paging-nav ul li:last-child { margin-right: 0; }

.tm-paging-link {
    background-color: #F0F0F0;
    color: #777;
    width: 50px;
    height: 50px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.tm-paging-item .tm-paging-link:hover,
.tm-paging-item.active .tm-paging-link {
    background-color: #00684A;
    color: white;
}

.tm-btn.disabled {
    background-color: #F0F0F0;
    color: #777;
    cursor: not-allowed;
}

.tm-external-link { color: #00684A; }
.tm-external-link:hover { color: #004628; }

.tm-paging-wrapper {
    display: flex;
    justify-content: flex-end;
    align-items: center;
}

.tm-prev-next-wrapper,
.tm-paging-wrapper {
    flex: 0 0 50%;
    max-width: 50%;
    padding-left: 15px;
    padding-right: 15px;
}

.tm-copyright { text-align: right; }

/* Single Post page */
hr.tm-hr-primary { border-top: 5px solid #00684A; }

video {
    width: 100%;
    height: auto;
}

.tm-comment {
    display: flex;
    align-items: flex-start;
}

.tm-comment-figure {
    margin-top: 10px;
    margin-right: 30px;
}

.tm-comment-reply { padding-left: 37px; }

.form-control {
    height: 45px;
    border-color: #00684A;
    border-radius: 0;
}

.tm-comment-form { max-width: 360px; }
.tm-category-list { list-style-type: none; }
figure { margin: 0; }
figcaption { line-height: 1.4; }

.tm-post-full { max-width: 600px; }

.tm-post-sidebar {
    max-width: 280px;
    margin-left: auto;
    margin-right: 0;
}

.tm-insights {
    background: #F1F1F1;
    line-height: 1.3em;
    padding: 0 1em 1em 1em;
}

.tm-pt-10 { padding-top: 10px; }
.tm-pt-15 { padding-top: 15px; }
.tm-pt-20 { padding-top: 20px; }
.tm-pt-30 { padding-top: 30px; }
.tm-pt-45 { padding-top: 45px; }
.tm-pt-60 { padding-top: 60px; }
.tm-mb-25 { margin-bottom: 25px; }
.tm-mb-30 { margin-bottom: 30px; }
.tm-mb-40 { margin-bottom: 40px; }
.tm-mb-45 { margin-bottom: 45px; }
.tm-mb-55 { margin-bottom: 55px; }
.tm-mb-60 { margin-bottom: 60px; }
.tm-mb-65 { margin-bottom: 65px; }
.tm-mb-75 { margin-bottom: 75px; }
.tm-mb-80 { margin-bottom: 80px; }
.tm-mb-120 { margin-bottom: 120px; }
.tm-mt-40 { margin-top: 40px; }
.tm-mt-100 { margin-top: 100px; }
.tm-mr-20 { margin-right: 20px; }
.tm-color-primary, span.tm-color-primary { color: #00684A; }
a.tm-color-gray, .tm-color-gray { color: #777; }
a.tm-color-gray:hover { color: #00684A; }
.tm-bg-gray { background-color: #F3F4F5; }
button:focus { outline: none; }
a:hover {
    text-decoration: none;
    color: #004628;
}

a:hover figcaption { color: #004628; }
.img-thumbnail { max-width: none; }
.tm-about-pad { padding: 40px 35px; }
.tm-person { max-width: 430px; }
.tm-line-height-short { line-height: 1.8; }
/* ... */

